blueprints/gke/autopilot/bundle/app/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: web
        - containerPort: 8080
          name: status
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        readinessProbe:
          httpGet:
            path: /stub_status
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 2
          failureThreshold: 1 
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          memory: 10Mi            
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:0.10.0
        ports:
        - containerPort: 9113
          name: metrics          
        requests:
          cpu: 5m
          memory: 5Mi
        limits:
          memory: 5Mi            
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sample
  annotations:
    annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"web":"HTTP"}'
    cloud.google.com/backend-config: '{"default": "backendconfig"}'
  labels:
    app: nginx
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
    app: nginx
