blueprints/gke/autopilot/bundle/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app"
    kubernetes.io/ingress.allow-http: "true"
  name: ingress
  namespace: sample
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        name: web
